1: Support Google Guice v5.x (#2)
Task-Url: https://github.com/tazmaniax/play-guice/issues/1